# latlon-bbox

./: .gitignore  LICENSE  README.md  pyproject.toml
src/latlon_bbox/: __init__.py  bbox.py
