[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "latlon-bbox"
version = "0.1.0"
description = "Compute bounding boxes from (lat, lon, radius_km)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "dinesh-kanakaraj", email = "dineshkanakaraj2000@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/youruser/latlon-bbox"
Issues = "https://github.com/youruser/latlon-bbox/issues"

[project.scripts]
latlon-bbox = "latlon_bbox.bbox:main"
